# nninteractive-lesion-segmentation-validation

./: .gitattributes  .gitignore  .gitmodules  Dockerfile.template  README.md  build_evaluation_docker.sh  build_processor_docker.sh  build_uok_docker.sh  entrypoint.ipynb  prepare_data.conf.example  prepare_data.py_template  prepare_data.sh  prepare_data.sh_template  pyproject.toml  setup.py  test_prepare_data.sh
datasets/: __init__.py  base.py  factory.py  longitudinal_ct.py  medical_segmentation.py  nifti_utils.py  registry.py
datasets/configs/: __init__.py  longitudinal_ct.yaml
evaluation/: Dockerfile.template  __init__.py  config.py  dataset_selection.py  evaluate.py  metrics.py  predictor_factory.py  run.py  runner.py
evaluation/configs/: __init__.py  evaluation_run.yaml
evaluation/configs/models/: nninteractive_v1.yaml  nninteractive_v1_bbox_1pos.yaml  nninteractive_v1_pts_1pos_1neg.yaml  nninteractive_v1_scribble_diameter_ann.yaml  nninteractive_v1_scribble_spline.yaml  nninteractive_v2.yaml  nninteractive_v2_bbox_1pos.yaml  nninteractive_v2_pts_1pos_1neg.yaml  nninteractive_v2_scribbe_spline.yaml  nninteractive_v2_scribble_diameter_ann.yaml
interactive_seg/interactive_seg/: __init__.py
interactive_seg/interactive_seg/config/: __init__.py  prompt_generation_config.py
interactive_seg/interactive_seg/device/: __init__.py  device.py  get_device.py
interactive_seg/interactive_seg/io/: __init__.py  image_io.py  prompt_io.py
interactive_seg/interactive_seg/prompt_generation/: __init__.py  generate_nninteractive_prompts.py  prepare_config.py  prompt_generation.py
interactive_seg/interactive_seg/seg_model/: __init__.py  interactive_seg_model.py
interactive_seg/interactive_seg_nninteractive_v1/: __init__.py  config.py  inference_session.py  model.py
interactive_seg/interactive_seg_nninteractive_v2/: __init__.py  config.py  inference_session.py  model.py
processor/: Dockerfile.template  Pipfile  process.py
processor/tests/: test_iteration.py
src/config/: nninteractive_config.py  nninteractive_prompt_generation_config.py
src/config/nninteractive/: model_config.py  prompt_generation_config.py
src/inference/: inference_session.py  interactive_seg_model.py  model.py
src/inference/nninteractive/: inference_session.py  model.py
src/utils/geometry/: nonzero_region.py
src/utils/helpers/: create_ref_masks.py  extract_prompt_labels.py
src/utils/io/: image_io.py  prompt_io.py
test/: prepare_data.bats
test/resources/: filelist.txt  filelist_md5.txt
uok/: Dockerfile.template
(+21 files in other folders)
