# pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lesion-segmentation-validation"
version = "0.1.0"
description = "Validation framework for evaluating nnInteractive on 3D CT lesion segmentation without retraining"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "nninteractive @ git+https://github.com/MIC-DKFZ/nnInteractive.git",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-image>=0.21",
    "nibabel>=5.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "ipython",
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
