[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lesion-segmentation-validation"
version = "0.1.0"
description = "Validation framework for evaluating nnInteractive on 3D CT lesion segmentation without retraining"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "ipython",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["interactive_seg"]
include = ["interactive_seg*"]
